# Zilch

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Checker.cpp  Checker.h  Dice.cpp  Dice.h  Die.cpp  Die.h  GameManager.cpp  GameManager.h  GameUI.cpp  GameUI.h  PlatformDefinitions.h  Player.h  README.md  Score.h  Zilch.cpp  Zilch.h  ZilchStates.h  main.cpp  makefile  oldZilch.h  zilch  zilch.cpp  zilch.h
.github/workflows/: codeql-analysis.yml
